--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <title>Студия</title>
   </head>
   <body>
@@ -431,7 +431,7 @@
       </div>
     </footer>
     <!-- Модальное окно -->
-    <div data-modal class="backdrop backdrop--is-hidden">
+    <div data-modal class="backdrop is-hidden">
       <div class="modal">
         <button data-modal-close type="button" class="modal__button-close">
           <svg class="modal__icon-close" width="18" height="18">
