--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
   <body>
     <!-- header -->
     <header class="page-header">
-      <div class="container main-nav">
+      <div class="container container--flex">
         <a class="logo" href="./index.html">Web<span class="logo__header">Studio</span></a>
         <nav class="site-nav">
           <ul class="site-nav__list">
@@ -62,7 +62,7 @@
       <!-- Фильтр наших работ -->
       <section class="section">
         <div class="container">
-          <h1 class="filter-title visually-hidden">Фильтр наших работ</h1>
+          <h1 class="section-title section-title--visually-hidden">Фильтр наших работ</h1>
           <ul class="filter">
             <li class="filter__item"><button class="filter__button" type="button">Все</button></li>
             <li class="filter__item">
@@ -96,7 +96,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="gallery__desc">
+                <div class="gallery__tumb">
                   <h2 class="gallery__title">Технокряк</h2>
                   <p class="gallery__text">Веб-сайт</p>
                 </div>
@@ -116,7 +116,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="gallery__desc">
+                <div class="gallery__tumb">
                   <h2 class="gallery__title">Постер New Orlean vs Golden Star</h2>
                   <p class="gallery__text">Дизайн</p>
                 </div>
@@ -132,7 +132,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="gallery__desc">
+                <div class="gallery__tumb">
                   <h2 class="gallery__title">Ресторан Seafood</h2>
                   <p class="gallery__text">Приложение</p>
                 </div>
@@ -148,7 +148,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="gallery__desc">
+                <div class="gallery__tumb">
                   <h2 class="gallery__title">Проект Prime</h2>
                   <p class="gallery__text">Дизайн</p>
                 </div>
@@ -164,7 +164,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="gallery__desc">
+                <div class="gallery__tumb">
                   <h2 class="gallery__title">Проект Boxes</h2>
                   <p class="gallery__text">Приложение</p>
                 </div>
@@ -184,7 +184,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="gallery__desc">
+                <div class="gallery__tumb">
                   <h2 class="gallery__title">Inspiration has no Borders</h2>
                   <p class="gallery__text">Веб-сайт</p>
                 </div>
@@ -200,7 +200,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="gallery__desc">
+                <div class="gallery__tumb">
                   <h2 class="gallery__title">Издание Limited Edition</h2>
                   <p class="gallery__text">Дизайн</p>
                 </div>
@@ -216,7 +216,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="gallery__desc">
+                <div class="gallery__tumb">
                   <h2 class="gallery__title">Проект LAB</h2>
                   <p class="gallery__text">Маркетинг</p>
                 </div>
@@ -236,7 +236,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="gallery__desc">
+                <div class="gallery__tumb">
                   <h2 class="gallery__title">Growing Business</h2>
                   <p class="gallery__text">Приложение</p>
                 </div>
